# DCCT-NIDS

./: .gitignore  README.md  pyproject.toml
configs/datasets/: cse_cic_ids2018.yaml  cse_cic_ids2018_attack_taxonomy.json  cse_cic_ids2018_feature_policy.json  cse_cic_ids2018_features_compact.json  cse_cic_ids2018_features_full.json  cse_cic_ids2018_features_reduced.json  cse_cic_ids2018_label_mapping.json  cse_cic_ids2018_official_feature_sets.json
configs/experiments/: block_04_exact_deduplication.json  block_06_open_set_fold_protocol.json  block_06_strict_chronological_protocol.json  experiment_registry.json
configs/models/: block_08b_xgboost_binary_compact.json  block_08c_lightgbm_backend.json  block_08c_operational_lightgbm.json  block_08d_catboost_backend.json  block_08d_operational_catboost.json
configs/preprocessing/: block_08a_compact_strict_preprocessor.json
outputs/manifests/: block_02a_canonical_schema.json  block_02b_dataset_audit_manifest.json  block_04_deduplicated_dataset_checksum.json  block_04_exact_deduplication_manifest.json  block_05_feature_label_policy_manifest.json  block_05a_taxonomy_correction_manifest.json  block_06_split_artifact_checksums.json  block_06_split_protocol_manifest.json  block_06a_fix_sampling_manifest.json  block_07_feature_space_checksums.json  block_07_official_feature_spaces_manifest.json  block_08a_compact_materialization_manifest.json  block_08a_compact_split_checksums.json  (+6 more)
scripts/: block_04_exact_deduplication.sql  block_06_reconstruct_provenance.sql  block_08a_compact_preprocessing.sql
(+123 files in other folders)
