[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dcct-nids"
version = "0.1.0"
description = "Drift-calibrated cross-view contrastive network intrusion detection research framework"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "itscodebakery", email = "ashayan29@gmail.com"}]
license = {text = "MIT"}
dependencies = [
  "numpy>=1.26",
  "pandas>=2.1",
  "scipy>=1.11",
  "scikit-learn>=1.4",
  "matplotlib>=3.8",
  "seaborn>=0.13",
  "pyyaml>=6.0",
  "tqdm>=4.66",
  "joblib>=1.3",
  "psutil>=5.9",
]

[project.optional-dependencies]
deep = ["torch>=2.2", "torchmetrics>=1.3"]
dev = ["pytest>=8", "pytest-cov>=5", "ruff>=0.4", "mypy>=1.9"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
